--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -468,6 +468,8 @@
               href: bulk-executor-graph-dotnet.md
             - name: Gremlin-query's optimaliseren
               href: graph-execution-profile.md
+            - name: Grafiekgegevens visualiseren
+              href: graph-visualization.md
             - name: Spring-gegevens opslaan en beheren
               href: /java/azure/spring-framework/configure-spring-data-gremlin-java-app-with-cosmos-db
               maintainContext: true
