--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -122,8 +122,6 @@
       href: visualizations.md
     - name: Partnerintegraties
       href: platform/partners.md
-    - name: Afschaffing van de OMS-portal
-      href: platform/oms-portal-transition.md
     - name: Veelgestelde vragen
       items:
         - name: Log Analytics
@@ -837,10 +835,12 @@
               items:
                 - name: Waarschuwingen voor gebeurtenissen van het activiteitenlogboek
                   href: platform/alerts-activity-log.md
-                - name: Beheergebeurtenissen migreren naar waarschuwingen voor activiteitenlogboeken
-                  href: platform/migrate-management-alerts.md
-                - name: Waarschuwingen voor servicestatusmeldingen
-                  href: platform/alerts-activity-log-service-notifications.md
+            - name: Servicestatusmeldingen in het activiteitenlogboek
+              items:
+                - name: Servicestatusmeldingen weergeven
+                  href: ../service-health/service-notifications.md?toc=%2fazure%2fazure-monitor%2ftoc.json
+                - name: Regel voor servicestatusmelding configureren
+                  href: ../service-health/alerts-activity-log-service-notifications.md?toc=%2fazure%2fazure-monitor%2ftoc.json
             - name: Actiegroepen gebruiken
               items:
                 - name: Een actiegroep maken
@@ -885,12 +885,6 @@
                   href: platform/alerts-enable-template.md
                 - name: Een klassieke metrische waarschuwing die een webhook aanroept
                   href: platform/alerts-webhooks.md
-        - name: Servicestatusmeldingen in het activiteitenlogboek
-          items:
-            - name: Meldingen weergeven
-              href: platform/service-notifications.md
-            - name: Waarschuwingen voor meldingsgebeurtenissen configureren
-              href: platform/alerts-activity-log-service-notifications.md
         - name: Automatisch schalen
           items:
             - name: Walkthrough
@@ -1076,12 +1070,10 @@
           href: ./platform/classic-api-retirement-metrics-autoscale.md
         - name: Klassieke waarschuwingen en bewaking
           href: platform/monitoring-classic-retirement.md
-        - name: Waarschuwingen van Log Analytics uitbreiden naar Azure
-          href: platform/alerts-extend.md
-        - name: Waarschuwingen van de OMS-portal kopiëren naar Azure Portal
-          href: platform/alerts-extend-tool.md
         - name: API-voorkeur voor logboekwaarschuwingen wijzigen
           href: platform/alerts-log-api-switch.md
+        - name: Afschaffing van de OMS-portal
+          href: platform/oms-portal-transition.md
 - name: Resources
   items:
     - name: Azure-roadmap
