--- a/articles/jenkins/toc.yml
+++ b/articles/jenkins/toc.yml
@@ -31,6 +31,8 @@
               maintainContext: true
             - name: Implementeren naar AKS met behulp van blauw/groen-patroon
               href: jenkins-aks-blue-green-deployment.md
+            - name: CI/CD met Azure Dev Spaces
+              href: tutorial-jenkins-dev-spaces.md
         - name: App Service
           items:
             - name: Azure-resources in een pijplijntaak maken
