commit translated contents

--- a/articles/cognitive-services/Labs/URL-Preview/index.yml
+++ b/articles/cognitive-services/Labs/URL-Preview/index.yml
@@ -12,6 +12,6 @@ metadata:
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 03/19/2018
-  ms.author: 'rosh, v-gedod'
+  ms.author: rosh
 abstract:
   description: 'Bing URL-voorbeeld-API haalt beknopte informatie op over een doel-URL, inclusief beschrijving, de vlag IsFamilyFriendly, representatieve afbeelding en link naar de pagina.'
