--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -143,6 +143,14 @@
               items:
                 - name: Via SMB
                   href: data-box-heavy-deploy-copy-data.md
+                - name: Via NFS
+                  href: data-box-heavy-deploy-copy-data-via-nfs.md
+                - name: Via REST
+                  href: data-box-heavy-deploy-copy-data-via-rest.md
+                - name: Via gegevenskopieerservice
+                  href: data-box-heavy-deploy-copy-data-via-copy-service.md
+                - name: Naar beheerde schijven
+                  href: data-box-heavy-deploy-copy-data-from-vhds.md
             - name: '4 - Terugsturen, uploaden, controleren'
               href: data-box-heavy-deploy-picked-up.md
         - name: Concepten
