--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -36,11 +36,16 @@
   items:
     - name: Overzicht
       href: concepts-overview.md
-    - name: Uploaden naar en opslaan in de cloud
+    - name: Accounts
       items:
-        - name: Storage
+        - name: Media Services-account
+          displayName: subscription
+          href: media-services-account-concept.md
+        - name: Storage-account
           href: storage-account-concept.md
           displayName: Storage side encryption
+    - name: Uploaden
+      items:
         - name: Assets
           href: assets-concept.md
     - name: Encoding
