--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -78,6 +78,9 @@
         - name: Verloop voorspellen
           displayName: 'Basic Sample, training, classification, sample 5'
           href: ui-sample-classification-predict-churn.md
+        - name: Vluchtvertragingen voorspellen
+          displayName: 'Basic Sample, training, classification, sample 6'
+          href: ui-sample-classification-predict-flight-delay.md
     - name: Azure Open-gegevenssets
       href: /azure/open-datasets/samples?context=azure/machine-learning/service/context/ml-context
 - name: Concepten
