--- a/articles/virtual-machines/extensions/toc.yml
+++ b/articles/virtual-machines/extensions/toc.yml
@@ -28,6 +28,10 @@
           href: azure-disk-enc-linux.md
         - name: Windows
           href: azure-disk-enc-windows.md
+    - name: Azure Backup voor SQL Server
+      items:
+        - name: Azure Backup voor SQL Server
+          href: backup-azure-sql-server-running-azure-vm.md
     - name: Aangepast script
       items:
         - name: Linux - versie 2
