commit translated contents

--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -220,6 +220,8 @@
           href: application-gateway-troubleshooting-502.md
         - name: Web Application Firewall (WAF)
           href: web-application-firewall-troubleshoot.md
+        - name: Status van resources
+          href: resource-health-overview.md
     - name: Migreren van v1 naar v2
       href: migrate-v1-v2.md
 - name: Naslaginformatie
