commit translated contents

--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -74,6 +74,9 @@
           href: expressroute-howto-circuit-arm.md
         - name: Azure-CLI
           href: howto-circuit-cli.md
+        - name: Azure Resource Manager-sjabloon
+          displayName: 'ARM,resource manager template'
+          href: expressroute-howto-circuit-resource-manager-template.md
     - name: Een peeringconfiguratie maken en wijzigen
       items:
         - name: Azure Portal
@@ -191,6 +194,7 @@
     - name: REST (klassiek)
       href: 'https://msdn.microsoft.com/library/azure/dn606310'
     - name: Resource Manager-sjabloon
+      displayName: 'ARM,resource manager template'
       href: /azure/templates/microsoft.network/expressroutecircuits
 - name: Resources
   items:
