--- a/articles/cognitive-services/Anomaly-Detector/toc.yml
+++ b/articles/cognitive-services/Anomaly-Detector/toc.yml
@@ -40,6 +40,8 @@
         - name: Containers configureren
           href: anomaly-detector-container-configuration.md
           displayName: 'docker, container, apikey, billing, log, mount, run, pull, port'
+        - name: Containerinstanties gebruiken
+          href: how-to/deploy-anomaly-detection-on-container-instances.md
 - name: Concepten
   items:
     - name: Best practices voor de Anomaly Detector-API
