--- a/articles/cognitive-services/text-analytics/toc.yml
+++ b/articles/cognitive-services/text-analytics/toc.yml
@@ -70,10 +70,10 @@
           href: how-tos/text-analytics-how-to-install-containers.md
         - name: Containers configureren
           href: text-analytics-resource-container-config.md
-        - name: Container Instances (ACI) gebruiken
+        - name: Containerinstanties gebruiken
           items:
             - name: Sentimentanalyse
-              href: how-tos/use-sentiment-analysis-on-aci.md
+              href: how-tos/deploy-sentiment-analysis-on-container-instances.md
         - name: Kubernetes Service (AKS) gebruiken
           items:
             - name: Taaldetectie
