--- a/articles/dev-spaces/toc.yml
+++ b/articles/dev-spaces/toc.yml
@@ -9,14 +9,18 @@
       items:
         - name: Teamontwikkeling
           href: quickstart-team-development.md
-        - name: Java (VS Code en CLI)
+        - name: Een toepassing uitvoeren
+          href: quickstart-cli.md
+        - name: Een toepassingen uitvoeren met een Dockerfile
+          href: quickstart-cli-dockerfile.md
+        - name: Java uitvoeren en fouten opsporen met VS Code
           href: quickstart-java.md
-        - name: .NET Core (VS Code en CLI)
+        - name: .NET Core uitvoeren en fouten opsporen met VS Code
           href: quickstart-netcore.md
-        - name: .NET Core (Visual Studio)
-          href: quickstart-netcore-visualstudio.md
-        - name: Node.js (VS Code en CLI)
+        - name: Node.js uitvoeren en fouten opsporen met VS Code
           href: quickstart-nodejs.md
+        - name: .NET Core uitvoeren en fouten opsporen met Visual Studio
+          href: quickstart-netcore-visualstudio.md
     - name: Zelfstudies
       items:
         - name: Java (VS Code en CLI)
@@ -55,6 +59,8 @@
       items:
         - name: Hoe Dev Spaces werkt
           href: how-dev-spaces-works.md
+        - name: Hoe VS Code werkt met Dev Spaces
+          href: how-vs-code-works-with-dev-spaces.md
     - name: Procedures
       items:
         - name: Een Kubernetes-cluster maken met behulp van Azure Cloud Shell
