--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -222,6 +222,8 @@
           href: web-application-firewall-troubleshoot.md
         - name: Status van resources
           href: resource-health-overview.md
+        - name: Log Analytics gebruiken
+          href: log-analytics.md
     - name: Migreren van v1 naar v2
       href: migrate-v1-v2.md
 - name: Naslaginformatie
