--- a/articles/cognitive-services/Face/toc.yml
+++ b/articles/cognitive-services/Face/toc.yml
@@ -77,6 +77,8 @@
           href: face-how-to-install-containers.md
         - name: Containers configureren
           href: face-resource-container-config.md
+        - name: Containerinstanties gebruiken
+          href: Face-API-How-to-Topics/deploy-face-container-on-container-instances.md
     - name: De verbonden service Face-API gebruiken
       href: vs-face-connected-service.md
 - name: Naslaginformatie
