--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -229,6 +229,11 @@
         - name: Containers configureren
           href: speech-container-configuration.md
           displayName: 'docker, container, billing, apikey, pull, logging, on-premises'
+        - name: On-premises gebruiken
+          displayName: 'kubectl, docker, helm, kubernetes, K8s, tiller, container, image, on-prem, on-premises'
+          href: speech-container-howto-on-premises.md
+        - name: Containerinstanties gebruiken
+          href: deploy-speech-on-container-instances.md
 - name: Voorbeelden
   items:
     - name: Speech-SDK
