--- a/articles/dev-spaces/index.yml
+++ b/articles/dev-spaces/index.yml
@@ -8,23 +8,31 @@ metadata:
   author: zr-msft
   ms.service: azure-dev-spaces
   ms.topic: landing-page
-  ms.date: 04/29/2019
+  ms.date: 07/08/2019
   ms.author: zarhoads
-  manager: jeconnoc
+  manager: gwallace
 abstract:
   description: Met Azure Dev Spaces kunt u uw hele microservicetoepassing die in Azure Kubernetes Service (AKS) wordt uitgevoerd testen en iteratief ontwikkelen zonder dat afhankelijkheden moeten worden gerepliceerd of gesimuleerd. Dankzij Azure Dev Spaces is het minder vervelend en complex om met uw team samen te werken in een gedeeld Azure Kubernetes Service-cluster (AKS) en om containers uit te voeren in AKS en daarin fouten op te sporen. Ontdek hoe u Azure Dev Spaces gebruikt met deze quickstarts.
 sections:
   - title: QuickStarts van vijf minuten
     items:
       - type: paragraph
-        text: 'Ontdek hoe u Azure Dev Spaces gebruikt voor teamsamenwerking in AKS:'
+        text: 'Ontdek hoe u Azure Dev Spaces gebruikt in AKS:'
       - type: list
         style: icon48
         items:
           - image:
               src: 'https://docs.microsoft.com/media/common/i_cligeneric.svg'
-            text: Teamontwikkeling met de Azure CLI
+            text: Ontwikkelen als onderdeel van een team
             href: quickstart-team-development.md
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_cligeneric.svg'
+            text: Een toepassing uitvoeren
+            href: quickstart-cli.md
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_cligeneric.svg'
+            text: Een toepassingen uitvoeren met een Dockerfile
+            href: quickstart-cli-dockerfile.md
       - type: paragraph
         text: 'Ontdek hoe u iteratief ontwikkelt en fouten rechtstreeks opspoort in AKS met Azure Dev Spaces:'
       - type: list
