commit translated contents

--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -242,6 +242,12 @@
           href: monitor-events-portal-how-to.md
         - name: Gebeurtenissen bewaken - CLI
           href: job-state-events-cli-how-to.md
+    - name: Azure Monitor gebruiken
+      items:
+        - name: Metrische gegevens bewaken
+          href: media-services-metrics-howto.md
+        - name: Diagnostische logboeken bewaken
+          href: media-services-diagnostic-logs-howto.md
     - name: Inhoud beveiligen
       items:
         - name: Beleid voor inhoudssleutels ophalen - .NET
