--- a/articles/active-directory/develop/index.yml
+++ b/articles/active-directory/develop/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 title: Microsoft Identity Platform (voorheen Azure Active Directory voor ontwikkelaars)
-summary: 'Het Microsoft Identity Platform bouwt voort op het ontwikkelaarsplatform van Azure Active Directory (Azure AD). Met het Microsoft Identity Platform kunnen ontwikkelaars toepassingen maken waarbij gebruikers zich met alle Microsoft-identiteiten kunnen aanmelden en waarmee tokens worden opgehaald voor het aanroepen van Microsoft-API''s, zoals Microsoft Graph, of API''s die door ontwikkelaars zijn gemaakt. Het is een zeer uitgebreid platform, dat bestaat uit een verificatieservice die voldoet aan de normen voor OAuth 2.0 en OpenID Connect, open source-bibliotheken, registratie en configuratie van toepassingen, robuuste conceptuele en referentiedocumentatie, ''quickstart-voorbeelden'', codevoorbeelden, zelfstudies en handleidingen.'
+summary: Het Microsoft Identity Platform bouwt voort op het ontwikkelaarsplatform van Azure Active Directory (Azure AD). Met het Microsoft Identity Platform kunnen ontwikkelaars toepassingen maken waarbij gebruikers zich met alle Microsoft-identiteiten kunnen aanmelden en waarmee tokens worden opgehaald voor het aanroepen van Microsoft-API's, zoals Microsoft Graph, of API's die door ontwikkelaars zijn gemaakt. Het is een zeer uitgebreid platform, dat bestaat uit een verificatieservice die voldoet aan de normen voor OAuth 2.0 en OpenID Connect, open source-bibliotheken, registratie en configuratie van toepassingen, robuuste conceptuele en referentiedocumentatie, 'quickstart-voorbeelden', codevoorbeelden, zelfstudies en handleidingen.
 metadata:
   ms.topic: landing-page
   ms.date: 06/22/2019
@@ -8,222 +8,228 @@ metadata:
   ms.service: active-directory
   ms.subservice: develop
   ms.workload: identity
+  ms.openlocfilehash: a558bbd114bdaa2046bd0bfb8ffd846d0804b9a3
+  ms.sourcegitcommit: 1572b615c8f863be4986c23ea2ff7642b02bc605
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 07/10/2019
+  ms.locfileid: "67785591"
 landingContent:
-  - title: Over het Microsoft Identity Platform
-    linkLists:
-      - linkListType: overview
-        links:
-          - text: Evolutie van het Microsoft Identity Platform
-            url: about-microsoft-identity-platform.md
-          - text: Microsoft Identity Platform (v2.0)
-            url: v2-overview.md
-          - text: Azure Active Directory voor ontwikkelaars (v1.0)
-            url: v1-overview.md
-      - linkListType: learn
-        links:
-          - text: One Dev Minute - Microsoft Identity Platform
-            url: 'https://youtu.be/y_fgJAatVhk'
-  - title: Een app met één pagina maken
-    linkLists:
-      - linkListType: get-started
-        links:
-          - text: Overzicht van scenario's
-            url: scenario-spa-overview.md
-      - linkListType: quickstart
-        links:
-          - text: Javascript
-            url: quickstart-v2-javascript.md
-      - linkListType: tutorial
-        links:
-          - text: Javascript
-            url: tutorial-v2-javascript-spa.md
-      - linkListType: deploy
-        links:
-          - text: App-integratie testen
-            url: identity-platform-integration-checklist.md
-      - linkListType: download
-        links:
-          - text: 'Voorbeelden - JavaScript, Angular'
-            url: 'sample-v2-code.md#single-page-applications-spa'
-          - text: Voorbeeld - SPA met Azure AD B2C
-            url: 'https://github.com/Azure-Samples/active-directory-b2c-javascript-msal-singlepageapp'
-  - title: Een web-app bouwen waarmee gebruikers worden aangemeld
-    linkLists:
-      - linkListType: get-started
-        links:
-          - text: Overzicht van scenario's
-            url: scenario-web-app-sign-user-overview.md
-      - linkListType: quickstart
-        links:
-          - text: ASP.NET Core
-            url: quickstart-v2-aspnet-core-webapp.md
-          - text: ASP.NET
-            url: quickstart-v2-aspnet-webapp.md
-      - linkListType: tutorial
-        links:
-          - text: ASP.NET Core
-            url: 'https://github.com/Azure-Samples/active-directory-aspnetcore-webapp-openidconnect-v2'
-      - linkListType: deploy
-        links:
-          - text: App-integratie testen
-            url: identity-platform-integration-checklist.md
-      - linkListType: download
-        links:
-          - text: 'Voorbeelden - ASP.NET Core, ASP.NET'
-            url: 'sample-v2-code.md#web-applications'
-  - title: Een web-app bouwen waarmee web-API's worden aangeroepen
-    linkLists:
-      - linkListType: get-started
-        links:
-          - text: Overzicht van scenario's
-            url: scenario-web-app-call-api-overview.md
-      - linkListType: tutorial
-        links:
-          - text: ASP.NET Core
-            url: 'https://github.com/Azure-Samples/active-directory-aspnetcore-webapp-openidconnect-v2#scope-of-this-tutorial'
-      - linkListType: deploy
-        links:
-          - text: App-integratie testen
-            url: identity-platform-integration-checklist.md
-      - linkListType: download
-        links:
-          - text: 'Voorbeelden - ASP.NET Core, ASP.NET, Node.js, Ruby'
-            url: 'sample-v2-code.md#web-applications'
-  - title: Een beveiligde web-API bouwen
-    linkLists:
-      - linkListType: get-started
-        links:
-          - text: Overzicht van scenario's
-            url: scenario-protected-web-api-overview.md
-      - linkListType: tutorial
-        links:
-          - text: ASP.NET Core-web-API
-            url: 'https://github.com/Azure-Samples/active-directory-dotnet-native-aspnetcore-v2'
-      - linkListType: deploy
-        links:
-          - text: App-integratie testen
-            url: identity-platform-integration-checklist.md
-      - linkListType: download
-        links:
-          - text: Voorbeeld - ASP.NET
-            url: 'https://github.com/Azure-Samples/active-directory-dotnet-native-aspnetcore-v2'
-  - title: Web-API die web-API's aanroept
-    linkLists:
-      - linkListType: get-started
-        links:
-          - text: Overzicht van scenario's
-            url: scenario-web-api-call-api-overview.md
-      - linkListType: tutorial
-        links:
-          - text: ASP.NET Core-web-API die Microsoft Graph aanroept
-            url: 'https://github.com/Azure-Samples/active-directory-dotnet-native-aspnetcore-v2/tree/master/2.%20Web%20API%20now%20calls%20Microsoft%20Graph'
-      - linkListType: deploy
-        links:
-          - text: App-integratie testen
-            url: identity-platform-integration-checklist.md
-  - title: Een desktop-app bouwen die web-API's aanroept
-    linkLists:
-      - linkListType: get-started
-        links:
-          - text: Overzicht van scenario's
-            url: scenario-desktop-overview.md
-      - linkListType: quickstart
-        links:
-          - text: Een token verkrijgen en Microsoft Graph API aanroepen (Windows-desktop)
-            url: quickstart-v2-windows-desktop.md
-          - text: Een token verkrijgen en Microsoft Graph API aanroepen (UWP)
-            url: quickstart-v2-uwp.md
-      - linkListType: tutorial
-        links:
-          - text: Microsoft Graph API aanroepen (Windows-desktop)
-            url: tutorial-v2-windows-desktop.md
-          - text: Microsoft Graph API aanroepen (UWP)
-            url: tutorial-v2-windows-uwp.md
-      - linkListType: deploy
-        links:
-          - text: App-integratie testen
-            url: identity-platform-integration-checklist.md
-      - linkListType: download
-        links:
-          - text: 'Voorbeeld - .NET, .NET Core'
-            url: 'sample-v2-code.md#desktop-and-mobile-public-client-apps'
-  - title: Een daemon-app bouwen die web-API's aanroept
-    linkLists:
-      - linkListType: get-started
-        links:
-          - text: Overzicht van scenario's
-            url: scenario-daemon-overview.md
-      - linkListType: quickstart
-        links:
-          - text: Een token verkrijgen en Microsoft Graph API aanroepen (.NET Core-console)
-            url: quickstart-v2-netcore-daemon.md
-          - text: Een token verkrijgen en Microsoft Graph API aanroepen (ASP.NET-web-app)
-            url: 'https://github.com/Azure-Samples/ms-identity-aspnet-daemon-webapp'
-      - linkListType: deploy
-        links:
-          - text: App-integratie testen
-            url: identity-platform-integration-checklist.md
-      - linkListType: download
-        links:
-          - text: 'Voorbeelden - ASP.NET-console, ASP.NET-web'
-            url: 'sample-v2-code.md#daemon-applications'
-  - title: Een mobiele app bouwen die web-API's aanroept
-    linkLists:
-      - linkListType: get-started
-        links:
-          - text: Overzicht van scenario's
-            url: scenario-mobile-overview.md
-      - linkListType: quickstart
-        links:
-          - text: Een token verkrijgen en Microsoft Graph API aanroepen (Android)
-            url: quickstart-v2-android.md
-          - text: Een token verkrijgen en Microsoft Graph API aanroepen (iOS)
-            url: quickstart-v2-ios.md
-          - text: Een token verkrijgen en Microsoft Graph API aanroepen (Xamarin iOS en Android)
-            url: 'https://github.com/Azure-Samples/active-directory-xamarin-native-v2'
-      - linkListType: tutorial
-        links:
-          - text: Gebruikers aanmelden en Microsoft Graph API aanroepen (Android)
-            url: tutorial-v2-android.md
-          - text: Gebruikers aanmelden en Microsoft Graph API aanroepen (iOS)
-            url: tutorial-v2-ios.md
-      - linkListType: deploy
-        links:
-          - text: App-integratie testen
-            url: identity-platform-integration-checklist.md
-      - linkListType: download
-        links:
-          - text: 'Voorbeeld - Android, iOS, Xamarin'
-            url: 'sample-v2-code.md#desktop-and-mobile-public-client-apps'
-  - title: Microsoft Graph API aanroepen
-    linkLists:
-      - linkListType: overview
-        links:
-          - text: Over Microsoft Graph
-            url: 'https://docs.microsoft.com/graph/overview'
-      - linkListType: quickstart
-        links:
-          - text: Binnen drie minuten aan de slag
-            url: 'https://developer.microsoft.com/graph/get-started'
-      - linkListType: learn
-        links:
-          - text: De API gebruiken
-            url: 'https://docs.microsoft.com/graph/use-the-api'
-          - text: Microsoft Graph REST API v1.0
-            url: 'https://docs.microsoft.com/graph/api/overview?toc=.%2Fref%2Ftoc.json&view=graph-rest-1.0'
-          - text: Microsoft Graph REST API bèta
-            url: 'https://docs.microsoft.com/graph/api/overview?toc=.%2Fref%2Ftoc.json&view=graph-rest-beta'
-      - linkListType: deploy
-        links:
-          - text: Graph Explorer
-            url: 'https://developer.microsoft.com/graph/graph-explorer/'
-  - title: Een klantgerichte app bouwen waarmee sociale en lokale identiteiten worden aangemeld
-    linkLists:
-      - linkListType: overview
-        links:
-          - text: Over Azure AD B2C
-            url: 'https://docs.microsoft.com/azure/active-directory-b2c/active-directory-b2c-overview'
-      - linkListType: tutorial
-        links:
-          - text: Id-providers toevoegen aan uw apps in Azure AD B2C
-            url: 'https://docs.microsoft.com/azure/active-directory-b2c/tutorial-add-identity-providers'
+- title: Over het Microsoft Identity Platform
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Evolutie van het Microsoft Identity Platform
+      url: about-microsoft-identity-platform.md
+    - text: Microsoft Identity Platform (v2.0)
+      url: v2-overview.md
+    - text: Azure Active Directory voor ontwikkelaars (v1.0)
+      url: v1-overview.md
+  - linkListType: learn
+    links:
+    - text: One Dev Minute - Microsoft Identity Platform
+      url: https://youtu.be/y_fgJAatVhk
+- title: Een app met één pagina maken
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: Overzicht van scenario's
+      url: scenario-spa-overview.md
+  - linkListType: quickstart
+    links:
+    - text: Javascript
+      url: quickstart-v2-javascript.md
+  - linkListType: tutorial
+    links:
+    - text: Javascript
+      url: tutorial-v2-javascript-spa.md
+  - linkListType: deploy
+    links:
+    - text: App-integratie testen
+      url: identity-platform-integration-checklist.md
+  - linkListType: download
+    links:
+    - text: Voorbeelden - JavaScript, Angular
+      url: sample-v2-code.md#single-page-applications
+    - text: Voorbeeld - SPA met Azure AD B2C
+      url: https://github.com/Azure-Samples/active-directory-b2c-javascript-msal-singlepageapp
+- title: Een web-app bouwen waarmee gebruikers worden aangemeld
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: Overzicht van scenario's
+      url: scenario-web-app-sign-user-overview.md
+  - linkListType: quickstart
+    links:
+    - text: ASP.NET Core
+      url: quickstart-v2-aspnet-core-webapp.md
+    - text: ASP.NET
+      url: quickstart-v2-aspnet-webapp.md
+  - linkListType: tutorial
+    links:
+    - text: ASP.NET Core
+      url: https://github.com/Azure-Samples/active-directory-aspnetcore-webapp-openidconnect-v2
+  - linkListType: deploy
+    links:
+    - text: App-integratie testen
+      url: identity-platform-integration-checklist.md
+  - linkListType: download
+    links:
+    - text: Voorbeelden - ASP.NET Core, ASP.NET
+      url: sample-v2-code.md#web-applications
+- title: Een web-app bouwen waarmee web-API's worden aangeroepen
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: Overzicht van scenario's
+      url: scenario-web-app-call-api-overview.md
+  - linkListType: tutorial
+    links:
+    - text: ASP.NET Core
+      url: https://github.com/Azure-Samples/active-directory-aspnetcore-webapp-openidconnect-v2#scope-of-this-tutorial
+  - linkListType: deploy
+    links:
+    - text: App-integratie testen
+      url: identity-platform-integration-checklist.md
+  - linkListType: download
+    links:
+    - text: Voorbeelden - ASP.NET Core, ASP.NET, Node.js, Ruby
+      url: sample-v2-code.md#web-applications
+- title: Een beveiligde web-API bouwen
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: Overzicht van scenario's
+      url: scenario-protected-web-api-overview.md
+  - linkListType: tutorial
+    links:
+    - text: ASP.NET Core-web-API
+      url: https://github.com/Azure-Samples/active-directory-dotnet-native-aspnetcore-v2
+  - linkListType: deploy
+    links:
+    - text: App-integratie testen
+      url: identity-platform-integration-checklist.md
+  - linkListType: download
+    links:
+    - text: Voorbeeld - ASP.NET
+      url: https://github.com/Azure-Samples/active-directory-dotnet-native-aspnetcore-v2
+- title: Web-API die web-API's aanroept
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: Overzicht van scenario's
+      url: scenario-web-api-call-api-overview.md
+  - linkListType: tutorial
+    links:
+    - text: ASP.NET Core-web-API die Microsoft Graph aanroept
+      url: https://github.com/Azure-Samples/active-directory-dotnet-native-aspnetcore-v2/tree/master/2.%20Web%20API%20now%20calls%20Microsoft%20Graph
+  - linkListType: deploy
+    links:
+    - text: App-integratie testen
+      url: identity-platform-integration-checklist.md
+- title: Een desktop-app bouwen die web-API's aanroept
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: Overzicht van scenario's
+      url: scenario-desktop-overview.md
+  - linkListType: quickstart
+    links:
+    - text: Een token verkrijgen en Microsoft Graph API aanroepen (Windows-desktop)
+      url: quickstart-v2-windows-desktop.md
+    - text: Een token verkrijgen en Microsoft Graph API aanroepen (UWP)
+      url: quickstart-v2-uwp.md
+  - linkListType: tutorial
+    links:
+    - text: Microsoft Graph API aanroepen (Windows-desktop)
+      url: tutorial-v2-windows-desktop.md
+    - text: Microsoft Graph API aanroepen (UWP)
+      url: tutorial-v2-windows-uwp.md
+  - linkListType: deploy
+    links:
+    - text: App-integratie testen
+      url: identity-platform-integration-checklist.md
+  - linkListType: download
+    links:
+    - text: Voorbeeld - .NET, .NET Core
+      url: sample-v2-code.md#desktop-and-mobile-public-client-apps
+- title: Een daemon-app bouwen die web-API's aanroept
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: Overzicht van scenario's
+      url: scenario-daemon-overview.md
+  - linkListType: quickstart
+    links:
+    - text: Een token verkrijgen en Microsoft Graph API aanroepen (.NET Core-console)
+      url: quickstart-v2-netcore-daemon.md
+    - text: Een token verkrijgen en Microsoft Graph API aanroepen (ASP.NET-web-app)
+      url: https://github.com/Azure-Samples/ms-identity-aspnet-daemon-webapp
+  - linkListType: deploy
+    links:
+    - text: App-integratie testen
+      url: identity-platform-integration-checklist.md
+  - linkListType: download
+    links:
+    - text: Voorbeelden - ASP.NET-console, ASP.NET-web
+      url: sample-v2-code.md#daemon-applications
+- title: Een mobiele app bouwen die web-API's aanroept
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: Overzicht van scenario's
+      url: scenario-mobile-overview.md
+  - linkListType: quickstart
+    links:
+    - text: Een token verkrijgen en Microsoft Graph API aanroepen (Android)
+      url: quickstart-v2-android.md
+    - text: Een token verkrijgen en Microsoft Graph API aanroepen (iOS)
+      url: quickstart-v2-ios.md
+    - text: Een token verkrijgen en Microsoft Graph API aanroepen (Xamarin iOS en Android)
+      url: https://github.com/Azure-Samples/active-directory-xamarin-native-v2
+  - linkListType: tutorial
+    links:
+    - text: Gebruikers aanmelden en Microsoft Graph API aanroepen (Android)
+      url: tutorial-v2-android.md
+    - text: Gebruikers aanmelden en Microsoft Graph API aanroepen (iOS)
+      url: tutorial-v2-ios.md
+  - linkListType: deploy
+    links:
+    - text: App-integratie testen
+      url: identity-platform-integration-checklist.md
+  - linkListType: download
+    links:
+    - text: Voorbeeld - Android, iOS, Xamarin
+      url: sample-v2-code.md#desktop-and-mobile-public-client-apps
+- title: Microsoft Graph API aanroepen
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Over Microsoft Graph
+      url: https://docs.microsoft.com/graph/overview
+  - linkListType: quickstart
+    links:
+    - text: Binnen drie minuten aan de slag
+      url: https://developer.microsoft.com/graph/get-started
+  - linkListType: learn
+    links:
+    - text: De API gebruiken
+      url: https://docs.microsoft.com/graph/use-the-api
+    - text: Microsoft Graph REST API v1.0
+      url: https://docs.microsoft.com/graph/api/overview?toc=.%2Fref%2Ftoc.json&view=graph-rest-1.0
+    - text: Microsoft Graph REST API bèta
+      url: https://docs.microsoft.com/graph/api/overview?toc=.%2Fref%2Ftoc.json&view=graph-rest-beta
+  - linkListType: deploy
+    links:
+    - text: Graph Explorer
+      url: https://developer.microsoft.com/graph/graph-explorer/
+- title: Een klantgerichte app bouwen waarmee sociale en lokale identiteiten worden aangemeld
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Over Azure AD B2C
+      url: https://docs.microsoft.com/azure/active-directory-b2c/active-directory-b2c-overview
+  - linkListType: tutorial
+    links:
+    - text: Id-providers toevoegen aan uw apps in Azure AD B2C
+      url: https://docs.microsoft.com/azure/active-directory-b2c/tutorial-add-identity-providers
